  - Converted Italian (it_IT) to UTF-8.
  - Converted Czech (cs_CZ) to UTF-8.
  - Converted Hungarian (hu_HU) to UTF-8.
  - Added Khmer translation (Thanks to Khoem Sokhem).
  - Remove ability for HTML emails to use CSS positioning to overlay
    SquirrelMail content (Thanks to Luc Beurton). (#2723196) [CVE-2009-1581]
  - Fixed improper sanitizing of PHP_SELF and the lack of sanitizing of
    QUERY_STRING server environment variables. (Thanks to Niels Teusink
    and Christian Balzer). [CVE-2009-1578]

Version 1.4.17 - 03 December 2008
---------------------------------
  - Allow control over white space wrapping of auto-generated
    SquirrelMail option widgets.
  - Fix matching of alternate identities when replying.
  - Fix HTTPS detection under Windows IIS that was incorrectly
    setting cookies to be transmitted only over a secure
    connections when none existed (#2318118).
  - Security: Fix XSS exploit in hyperlinks when rendering
    messages. Thanks to Secunia Research for reporting this
    issue and for their patience. [CVE-2008-2379]

Version 1.4.16 - 28 September 2008
----------------------------------
  - Added support for Latvian.
  - Add submit button type option widget
  - Allow address book lookups by fields other than nickname/alias
  - Include hooks in databased-based preference backend that have
    long been in the file-based preference backend
  - Removed the Address Take (abook_take) plugin; please see the Add
    Address (third party) plugin.
  - Allow a different server address for the POP server to be
    configured when using POP before SMTP.
  - Update the left_main_after_each_folder hook to work on the trash
    folder as well as all other folders.
  - Fix HTML validity issue with IE conditional construct (#1985916).
  - Backported sqsetcookie() from 1.5.2, so cookies won't be
    transmitted under non-SSL connections if the session is
    started under an SSL (https) connection (CVE-2008-3663).